--- a/TestTechniqueSpotify/appsettings.json
+++ b/TestTechniqueSpotify/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcLibraryContext": "Data Source=Library.db"
+  }
 }
